fix styling from chat input collapse

--- a/styles/chatbox.css
+++ b/styles/chatbox.css
@@ -184,23 +184,26 @@
 }
 
 .react-chatbot-kit-chat-input-container {
-  position: absolute;
-  bottom: 0;
+  display: none;
   width: 100%;
   display: flex;
+  height: 5vh;
+  min-height: 5vh;
+  max-height: 5vh;
 }
 
 .react-chatbot-kit-chat-message-container {
-  padding: 0 17.5px 30px 17.5px;
+  padding: 0 17.5px 0 17.5px;
   /* overflow-y: scroll; */
   overflow-x: hidden;
-  height: auto;
-  min-height: 100%;
-  /* margin-bottom: 8vh; */
+  height: 95vh;
+  min-height: 95vh;
+  max-height: 95vh;
 }
 
 .react-chatbot-kit-chat-input {
   width: 100%;
+  height: 100%;
   padding: 15px;
   border: none;
   font-size: 0.9rem;
